--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,32 @@
-language: php
+# use Docker infrastructure
+sudo: false
 
+cache:
+  directories:
+    - $HOME/.composer/cache
+
+language: php
 php:
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
 matrix:
   fast_finish: true
   allow_failures:
-    - php: 5.6
     - php: hhvm
 
-install:
-  - composer self-update
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 before_script:
-  - composer install --no-interaction
+  - travis_retry composer self-update
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
 
 script:
-  - ./vendor/bin/phpunit --coverage-clover=coverage.clover
+  - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
 
 after_script:
-  - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != '7.0' ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
