--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,37 @@
 {
-    "name": "treehouselabs/model-config",
-    "type": "library",
-    "description": "Library to configure enums in models",
-    "keywords": ["model", "config"],
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Peter Kruithof",
-            "email": "peter@treehouse.nl"
-        }
-    ],
-    "require": {
-        "php": ">=5.5"
-    },
-    "require-dev": {
-      "phpunit/phpunit": "~4.0",
-      "symfony/validator": "~2.4"
-    },
-    "autoload": {
-        "psr-4": { "TreeHouse\\Model\\Config\\": "src/TreeHouse/Model/Config/" }
+  "name": "treehouselabs/model-config",
+  "type": "library",
+  "description": "Library to configure enums in models",
+  "keywords": [
+    "model",
+    "config"
+  ],
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Peter Kruithof",
+      "email": "peter@treehouse.nl"
     }
+  ],
+  "require": {
+    "php": ">=5.5"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0",
+    "symfony/validator": "~2.4",
+    "scrutinizer/ocular": "~1.1"
+  },
+  "autoload": {
+    "psr-4": {
+      "TreeHouse\\Model\\Config\\": "src/TreeHouse/Model/Config/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "TreeHouse\\Model\\Config\\Tests\\": "tests/TreeHouse/Model/Config/Tests/"
+    }
+  },
+  "scripts": {
+    "test": "phpunit"
+  }
 }
