--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,20 +10,22 @@
   processIsolation            = "false"
   stopOnFailure               = "false"
   syntaxCheck                 = "false"
-  bootstrap                   = "tests/bootstrap.php">
+  bootstrap                   = "vendor/autoload.php">
 
   <testsuites>
     <testsuite>
-      <directory suffix="Test.php">./tests</directory>
+      <directory>./tests</directory>
     </testsuite>
   </testsuites>
 
   <filter>
     <whitelist>
       <directory suffix=".php">./src</directory>
-      <exclude>
-        <directory>./tests/TreeHouse/Model/Config/Tests</directory>
-      </exclude>
     </whitelist>
   </filter>
+
+  <logging>
+    <log type="coverage-text" target="php://stdout"/>
+    <log type="coverage-html" target="build/coverage" charset="UTF-8" yui="true" highlight="true"/>
+  </logging>
 </phpunit>
