--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     }
   ],
   "require": {
-    "php": ">=5.5"
+    "php": ">=5.5",
+    "ext-stemmer": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
