Fixed Travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 # use Docker infrastructure
 sudo: false
 
+addons:
+  apt:
+    packages:
+      - libstemmer-dev
+
 cache:
   directories:
     - $HOME/.composer/cache
@@ -21,6 +26,17 @@ cache:
   directories:
     - $HOME/.composer/cache
 
+install:
+  - sh -c "
+      git clone https://github.com/jbboehr/php-stemmer.git;
+      cd php-stemmer && git checkout v1.0.2;
+      phpize;
+      ./configure;
+      make;
+      make install;
+    "
+  - echo "extension = stemmer.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+
 before_script:
   - travis_retry composer self-update
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
@@ -29,4 +45,4 @@ script:
   - ./vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
 
 after_script:
-  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != '7.0' ]]; then php vendor/bin/ocular code-coverage:upload --format=php-clover coverage.clover; fi
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' && $TRAVIS_PHP_VERSION != '7.0' ]]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover coverage.clover; fi
