--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
-    "symfony/validator": "~2.4",
-    "scrutinizer/ocular": "~1.1"
+    "symfony/validator": "~2.4"
   },
   "autoload": {
     "psr-4": {
